Bug 825734 - Plugins stop rendering when top half of plugin scrolled off top of page, in HiDPI mode. r=jfkthame